minhas_policiesss/ecommerce/floodgate-intra-egress-ecommerce.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-intra-egress-ecommerce
  namespace: ecommerce
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow-intranamespace
    source-workload: ''
    source-namespace: ecommerce
    target-service: ''
    target-port: '0'
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ecommerce
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
