minhas_policiesss/ecommerce/floodgate-intra-ingress-ecommerce.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-intra-ingress-ecommerce
  namespace: ecommerce
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow-intranamespace
    source-workload: ''
    source-namespace: ecommerce
    target-service: ''
    target-port: '0'
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ecommerce
